{{$NEXT}}

0.045     2012-08-16 11:47:51 America/Los_Angeles
     
     Just documentaiton edits.  No code changes.

0.044     2012-08-15 18:25:05 America/Los_Angeles

     Added a 'clean' command to force removal of orphaned
     archives on the filesystem.  See POD for details.  You'll
     need to have Pinto-0.051 installed locally (or on the server,
     if using a remote repository) to use this new command.

0.043     2012-08-14 14:53:41 America/Los_Angeles

     Added global options for username and password.  These only
     matter if using a remote repository that has authentication
     enabled.

0.042     2012-05-18 16:37:10 America/Los_Angeles

     * Bug Fixes

     The init command did not honor the PINTO_REPOSITORY_ROOT
     environment variable.  Thanks fibo.

0.041     2012-05-15 11:09:56 America/Los_Angeles

     First production release.  The included pinto utility replaces
     both the pinto-admin and pinto-remote utilities.  However, you
     still have to decide which backend to install (either Pinto or
     Pinto::Remote) which ship separately from this distribution.

0.040_02  2012-05-04 15:37:34 America/Los_Angeles

     Iniital developer release.